--- a/src/style/CardItems.css
+++ b/src/style/CardItems.css
@@ -20,14 +20,14 @@
   flex-wrap: wrap;
 }
 .cardsContainer article {
-  width: 18rem;
+  width: 19rem;
   height: 23rem;
   font-family: "Poppins", sans-serif;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
   position: relative;
-  margin: 1rem 0;
+  margin: 1rem;
 }
 .cardsContainer article img {
   width: 100%;
@@ -54,9 +54,15 @@
 .cardsContainer article small {
   position: absolute;
   right: 0.5rem;
-  bottom: 4.5rem;
+  bottom: 4.8rem;
   font-size: 0.9rem;
   color: #555;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+}
+.cardsContainer article small > svg {
+  font-size: 1.2rem;
 }
 .cardsContainer article #wishList {
   position: absolute;
