--- a/src/style/CardItems.scss
+++ b/src/style/CardItems.scss
@@ -20,12 +20,12 @@ $mainFont: "Poppins", sans-serif;
     z-index: 2;
     flex-wrap: wrap;
     article{
-        width:18rem;
+        width:19rem;
         height: 23rem;
         font-family: $mainFont;
         user-select: none;
         position: relative;
-        margin: 1rem 0;
+        margin: 1rem ;
         img{
             width: 100%;
             height:16rem;
@@ -52,9 +52,15 @@ $mainFont: "Poppins", sans-serif;
         small{
             position: absolute;
             right: .5rem;
-            bottom: 4.5rem;
+            bottom: 4.8rem;
             font-size: .9rem;
             color: #555;
+            display: flex;
+            align-items: center;
+            gap: .3rem;
+            >svg {
+                font-size: 1.2rem;
+            }
         }
         #wishList{
             position: absolute;
