--- a/src/style/CardItems.scss
+++ b/src/style/CardItems.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 $mainFont: "Poppins", sans-serif;
+
 * {
     padding: 0;
     margin: 0;
@@ -9,9 +10,9 @@ $mainFont: "Poppins", sans-serif;
     scroll-behavior: smooth;
 }
 
-.cardsContainer{
+.cardsContainer {
     width: 100vw;
-    min-height:73vh;
+    min-height: 73vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,37 +20,43 @@ $mainFont: "Poppins", sans-serif;
     padding-bottom: 2rem;
     z-index: 2;
     flex-wrap: wrap;
-    article{
-        width:19rem;
+
+    article {
+        width: 19rem;
         height: 23rem;
         font-family: $mainFont;
         user-select: none;
         position: relative;
-        margin: 1rem ;
-        img{
+        margin: 1rem;
+
+        img {
             width: 100%;
-            height:16rem;
+            height: 16rem;
             border-radius: 10px;
         }
-        a{
+
+        a {
             color: #000;
         }
-        h4{
+
+        h4 {
             padding: .8rem 0 .5rem .7rem;
         }
-        p{
+
+        p {
             font-size: .8rem;
             padding: .5rem.7rem;
             color: #555;
         }
-        span{
+
+        span {
             font-weight: bold;
             padding: 0 .7rem;
             font-size: .9rem;
             text-decoration: underline;
         }
 
-        small{
+        small {
             position: absolute;
             right: .5rem;
             bottom: 4.8rem;
@@ -58,11 +65,13 @@ $mainFont: "Poppins", sans-serif;
             display: flex;
             align-items: center;
             gap: .3rem;
+
             >svg {
                 font-size: 1.2rem;
             }
         }
-        #wishList{
+
+        #wishList {
             position: absolute;
             top: .7rem;
             right: .7rem;
@@ -70,34 +79,37 @@ $mainFont: "Poppins", sans-serif;
             color: #555;
             opacity: .8;
             transition: .3s ease;
-            &:hover{
+
+            &:hover {
                 opacity: 1;
             }
         }
 
-        .ownerPicContainer{
+        .ownerPicContainer {
             position: absolute;
             bottom: 50%;
             left: 1rem;
             background-color: white;
             width: 4rem;
             height: 4.2rem;
-            border-radius:0 7px 7px 0;
+            border-radius: 0 7px 7px 0;
             position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
             transition: 0.3s ease-in-out;
             cursor: pointer;
-            img{
-                width:2.7rem;
-                height:2.7rem;  
-                border-radius: 50%;  
-                object-fit: cover;     
+
+            img {
+                width: 2.7rem;
+                height: 2.7rem;
+                border-radius: 50%;
+                object-fit: cover;
                 border: 1px solid #555;
                 margin-left: 5px;
             }
-            &::before{
+
+            &::before {
                 content: '';
                 position: absolute;
                 left: 7px;
@@ -106,54 +118,179 @@ $mainFont: "Poppins", sans-serif;
                 height: 100%;
                 background-color: #cdc6c6;
             }
-            &::after{
+
+            &::after {
                 content: '';
                 position: absolute;
                 right: -4px;
                 bottom: 1px;
                 width: 7px;
                 height: 95%;
-                border-radius:0 5px 5px 0;
+                border-radius: 0 5px 5px 0;
                 background-color: #DBDBDB;
                 display: none;
                 transition: .3s ease-in;
             }
 
-            &:hover::after{
+            &:hover::after {
                 display: block;
             }
-            &:hover{
-                transform: translateY(-5px) ;
+
+            &:hover {
+                transform: translateY(-5px);
             }
         }
     }
-    
 
-    .load_more{
+
+    .load_more {
         width: 100%;
-        height: 4rem;
+        min-height: 4rem;
+    }
+}
+
+.Filter {
+    position: sticky;
+    bottom: 1rem;
+    left: 50%;
+    background-color: #1f1f1f;
+    color: white;
+    width: 9rem;
+    height: 3rem;
+    transform: translateX(-50%);
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+
+    &:hover {
+        transform: translateX(-50%) scale(1.03);
+    }
+
+}
+
+.filter_container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #1f1f1f28;
+    width: 100vw;
+    height: 150vh;
+    overflow: hidden;
+    font-family: $mainFont;
+    .filter_options {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 50vw;
+        height: 80vh;
+        background-color: #fff;
+        z-index: 3;
+        transform: translate(50%, -10%);
+        border-radius: 20px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
-        margin: 1rem 0;
-        button{
-            width: 14rem;
-            height: 3rem;
-            border: none;
-            background-color: #FE5B5F;
-            color: white;
-            font-family: $mainFont;
-            border-radius: 40px;
-            font-size: 1rem;
+        gap: 1rem;
+        // close btn 
+        .close{
+            position: absolute;
+            top: 1rem;
+            right: 2rem;
+            font-size: 2.2rem;
+            color: #555555b0;
             cursor: pointer;
-            transition: 0.3s ease-in-out;
-            box-shadow: 1px 1px 7px 2px #0000005e;
-            &:hover{
-                border: 2px solid black;
-                background-color: aliceblue;
-                color: #000;
+        }
+        >h1 {
+            font-size: 2rem;
+            padding: 0 2.5%;
+        }
+
+        .slot {
+            width: 100%;
+            min-height: 5rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 1rem 2.5%;
+            gap: .5rem;
+
+            >h1 {
+                font-size: 1.1rem;
             }
+
+            .mapContainer {
+                width: 95%;
+                min-height: 5rem;
+                display: flex;
+                justify-content: space-around;
+
+                >img {
+                    width: 7rem;
+                    height: 7rem;
+                    object-fit: contain;
+                    border: 1px solid #55555563;
+                    border-radius: 10px;
+                    padding: 10px;
+                    cursor: pointer;
+                    transition: .3s ease-in-out;
+
+                    &:hover {
+                        transform: scale(1.03);
+                    }
+                }
+            }
+            
+            .boxes{
+                width: 100%;
+                height: fit-content;
+                display: flex;
+                justify-content: space-evenly;
+                .box{
+                    padding:.8rem 1.5rem;
+                    border-radius: 5px;                    
+                    border: 1px solid #55555563;
+                    cursor: pointer;
+                    transition:.3s ease-in-out;
+                    &:hover{
+                        border: 1px solid #DB5255;
+                    }
+                }
+
+                .active_bx{
+                    border: 1px solid #DB5255;
+                    font-weight: bold;
+                }
+            }
+        }
+        form{
+        width: 100%;
+        min-height: 5rem;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 0 5%;
+        button{
+            background-color: #fc6b6d;
+            width: 8rem;
+            height: 3.5rem;
+            border-radius: 20px;
+            color: white;
+            transition: .3s ease-in-out;
+            &:hover{
+                transform: scale(1.03);
+            }
+        }
         }
     }
 }
 
+.show{
+    display: flex;
+}
+.hide{
+    display: none;
+}
