--- a/src/style/nav-footer.css
+++ b/src/style/nav-footer.css
@@ -173,8 +173,10 @@ nav .categories::-webkit-scrollbar {
   display: none;
 }
 nav .categories {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 nav .categories li {
   width: -moz-fit-content;
@@ -247,4 +249,55 @@ nav .categories li:hover a {
   .navActions .userWrapper {
     display: none !important;
   }
+}
+.language {
+  position: relative;
+  transition: 0.3s ease-in-out;
+  padding: 0.4rem;
+  background-color: #fff;
+}
+.language:hover {
+  padding: 0.4rem;
+  background-color: rgba(68, 68, 68, 0.1843137255);
+  border-radius: 50%;
+}
+.language #lang {
+  font-size: 1.4em;
+  cursor: pointer;
+}
+.language .lang_wrpper {
+  position: absolute;
+  bottom: -7.3rem;
+  right: 0.2rem;
+  width: 10rem;
+  height: 7rem;
+  border: 1px solid rgba(68, 68, 68, 0.2588235294);
+  background-color: white;
+  z-index: 4;
+  border-radius: 5px;
+  display: none;
+}
+.language .lang_wrpper ul {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.language .lang_wrpper ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+.language .lang_wrpper ul li img {
+  width: 1.5rem;
+}
+
+.lanVisual {
+  display: block !important;
 }/*# sourceMappingURL=nav-footer.css.map */
