--- a/src/style/nav-footer.scss
+++ b/src/style/nav-footer.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 $mainFont: "Poppins", sans-serif;
+
 * {
     padding: 0;
     margin: 0;
@@ -28,14 +29,15 @@ nav {
         font-family: $mainFont;
         border-bottom: 1px solid #eee;
 
-        > a {
+        >a {
             @include flexBox();
             gap: 0.5rem;
             font-size: 1.3rem;
             color: #fe5b5f;
             font-weight: bold;
         }
-        > a > img {
+
+        >a>img {
             width: 2.7rem;
         }
 
@@ -44,6 +46,7 @@ nav {
             height: 2.7rem;
             border-radius: 40px;
             box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.259);
+
             form {
                 width: 100%;
                 height: 100%;
@@ -51,6 +54,7 @@ nav {
                 align-items: center;
                 gap: 10px;
                 padding: 0 0.5rem;
+
                 input {
                     width: 90%;
                     height: 100%;
@@ -60,16 +64,19 @@ nav {
                     border: none;
                     font-family: $mainFont;
                 }
+
                 .svgWrapper {
                     width: 2rem;
                     height: 2rem;
                     border-radius: 50%;
                     background-color: #fe5b5f;
                     @include flexBox();
+
                     button {
                         background-color: transparent;
                         border: none;
                         cursor: pointer;
+
                         svg {
                             color: #fff;
                             font-size: 1rem;
@@ -86,13 +93,15 @@ nav {
             gap: 1rem;
             padding: 0 0.5rem;
             z-index: 4;
-            > a {
+
+            >a {
                 font-size: 0.8rem;
                 font-weight: bold;
                 color: #000;
                 padding: 0.4rem 0.8rem;
                 border-radius: 25px;
                 transition: 0.3s ease-in;
+
                 &:hover {
                     background-color: #cccccc3a;
                 }
@@ -108,19 +117,23 @@ nav {
                 cursor: pointer;
                 position: relative;
                 transition: 0.3s ease;
+
                 &:hover {
                     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.139);
                 }
+
                 svg {
                     font-size: 1.3rem;
                     color: #555;
                 }
+
                 .userProfile {
                     width: 2rem;
                     height: 2rem;
                     border-radius: 50%;
                     @include flexBox();
-                    > svg {
+
+                    >svg {
                         width: 100%;
                         height: 100%;
                     }
@@ -138,6 +151,7 @@ nav {
                     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.42);
                     border-radius: 5px;
                     display: none;
+
                     li {
                         a {
                             font-size: 0.8rem;
@@ -145,9 +159,11 @@ nav {
                             color: #000;
                             padding: 0.2rem 1rem;
                         }
+
                         margin: 0.5rem 0;
                         transition: 0.2s ease-in;
                         padding: 0.5rem 0;
+
                         &:hover {
                             background-color: #cccccc43;
                         }
@@ -164,6 +180,7 @@ nav {
         @include flexBox();
         gap: 3vw;
         overflow-x: scroll;
+
         /* Hide scrollbar for Chrome, Safari and Opera */
         &::-webkit-scrollbar {
             display: none;
@@ -171,18 +188,23 @@ nav {
 
         /* Hide scrollbar for IE, Edge and Firefox */
         & {
-            -ms-overflow-style: none; /* IE and Edge */
-            scrollbar-width: none; /* Firefox */
+            -ms-overflow-style: none;
+            /* IE and Edge */
+            scrollbar-width: none;
+            /* Firefox */
         }
+
         li {
             width: fit-content;
             height: fit-content;
             padding: 0.5rem;
             transition: 0.3s ease-in;
             color: #555;
+
             svg {
                 font-size: 1.2rem;
             }
+
             a {
                 display: flex;
                 flex-direction: column;
@@ -190,6 +212,7 @@ nav {
                 font-size: 0.85rem;
                 color: #555;
             }
+
             &:hover a {
                 color: #fe5b5f;
             }
@@ -197,7 +220,7 @@ nav {
     }
 }
 
-.mobile-nav{
+.mobile-nav {
     width: 100%;
     height: 5rem;
     border: 1px solid #555;
@@ -216,10 +239,12 @@ nav {
             justify-content: space-around;
             padding: 0 2rem;
             gap: 2rem;
-            a > p {
+
+            a>p {
                 font-size: 3vw;
             }
-            > a > img {
+
+            >a>img {
                 display: none !important;
             }
 
@@ -228,22 +253,25 @@ nav {
             }
 
             .userWrapper {
-                > a {
+                >a {
                     display: none;
                 }
             }
         }
     }
 }
+
 @media screen and (max-width: 600px) {
     .navActions {
         justify-content: center !important;
         padding: 0 0 !important;
         gap: 0 !important;
         border: none !important;
-        > a p {
+
+        >a p {
             display: none;
         }
+
         .searchInput {
             width: 92vw !important;
             height: 3rem !important;
@@ -253,4 +281,57 @@ nav {
             display: none !important;
         }
     }
+}
+
+.language {
+    position: relative;
+    transition: .3s ease-in-out;
+    padding: .4rem;
+    background-color: #fff;
+    &:hover {
+        padding: .4rem;
+        background-color: #4444442f;
+        border-radius: 50%;
+    }
+    
+    #lang {
+        font-size: 1.4em;
+        cursor: pointer;
+    }
+
+    .lang_wrpper{
+        position: absolute;
+        bottom: -7.3rem;
+        right: .2rem;
+        width: 10rem;
+        height: 7rem;
+        border: 1px solid #44444442;
+        background-color: white;
+        z-index: 4;
+        border-radius: 5px;
+        display: none;
+        ul{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            li{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: .5rem;
+                width: 100%;
+                height: 100%;
+                cursor: pointer;
+                font-size: .9rem;
+                img{
+                    width: 1.5rem;
+                }
+            }
+        }
+    }
+}
+.lanVisual {
+    display: block !important;
 }
