--- a/src/style/CardItems.scss
+++ b/src/style/CardItems.scss
@@ -181,6 +181,7 @@ $mainFont: "Poppins", sans-serif;
     height: 150vh;
     overflow: hidden;
     font-family: $mainFont;
+    z-index: 5;
     .filter_options {
         position: absolute;
         bottom: 0;
