--- a/src/style/dashboard.css
+++ b/src/style/dashboard.css
@@ -10,14 +10,14 @@
 
 main {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   background-color: #202123;
 }
 
 aside {
   width: 18%;
-  height: 100%;
+  min-height: 100%;
   position: relative;
   border-right: 2px solid rgba(255, 255, 255, 0.0941176471);
   transition: 0.4s ease-in;
@@ -173,10 +173,10 @@ aside .logOut:hover {
 }
 .mainBox .globalBox {
   width: 100%;
-  height: 90vh;
+  min-height: 90vh;
 }
 .mainBox .globalBox .mainView {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 }
 .mainBox .globalBox .mainView .gene_info_container {
@@ -237,8 +237,71 @@ aside .logOut:hover {
   font-size: 1.5rem;
   text-align: center;
 }
+.mainBox .table {
+  border-spacing: 0 15px;
+  width: 80vw;
+}
+.mainBox i {
+  font-size: 1.3rem !important;
+}
+.mainBox .Check {
+  color: #507bf1;
+}
+.mainBox .Aprove {
+  color: #57be68;
+}
+.mainBox .Reject {
+  color: #FE5B5F;
+}
+.mainBox .table tr {
+  border-radius: 20px;
+}
+.mainBox .table tbody tr {
+  border-radius: 20px;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+.mainBox .table tbody tr:hover {
+  background-color: #3f404d;
+  transform: translateY(-5px);
+}
+.mainBox tr td:nth-child(n+7),
+.mainBox tr th:nth-child(n+7) {
+  border-radius: 0 0.625rem 0.625rem 0;
+}
+.mainBox tr td:nth-child(1),
+.mainBox tr th:nth-child(1) {
+  border-radius: 0.625rem 0 0 0.625rem;
+}
 
 #ch2 {
   width: 55% !important;
   height: 55% !important;
+}
+
+.userCard {
+  background-color: #2c2d36;
+}
+.userCard .actionsBtns {
+  display: flex;
+  gap: 1rem;
+}
+.userCard .actionsBtns a {
+  background-color: #57be68;
+  padding: 0.2rem 1.5rem;
+  border-radius: 5px;
+}
+.userCard .actionsBtns button {
+  background-color: #FE5B5F;
+  padding: 0.2rem 1.5rem;
+  border-radius: 5px;
+}
+
+.Page {
+  margin: 4rem 50% !important;
+  transform: translateX(-10%);
+}
+
+.title {
+  color: azure;
 }/*# sourceMappingURL=dashboard.css.map */
