--- a/src/style/dashboard.scss
+++ b/src/style/dashboard.scss
@@ -11,7 +11,7 @@ $mainFont: "Poppins", sans-serif;
 
 main{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     background-color: #202123;
 
@@ -20,7 +20,7 @@ main{
 
 aside{
     width: 18%;
-    height: 100%;
+    min-height: 100%;
     position: relative;
     border-right:2px solid #ffffff18; ;
     transition: 0.4s ease-in;
@@ -184,11 +184,11 @@ aside{
 
     .globalBox{
         width: 100%;
-        height: 90vh;
+        min-height: 90vh;
         
         // MainView 
         .mainView{
-            height: 100%;
+            min-height: 100%;
             width: 100%;
             
             .gene_info_container{
@@ -253,9 +253,79 @@ aside{
             }
         }
     }
+
+    .table {
+		border-spacing: 0 15px;
+        width: 80vw;
+	}
+
+	i {
+		font-size:1.3rem !important;
+	}
+    .Check{
+        color: #507bf1;
+    }
+    .Aprove{
+        color: #57be68;
+    }
+    
+    .Reject{
+        color: #FE5B5F;
+    }
+	.table tr {
+		border-radius: 20px;
+       
+	}
+	.table tbody tr {
+		border-radius: 20px;
+        transition: .3s ease-in-out;
+        cursor: pointer;
+        &:hover{
+            background-color: #3f404d;
+            transform: translateY(-5px);
+        }
+	}
+    
+
+	tr td:nth-child(n+7),
+	tr th:nth-child(n+7) {
+		border-radius: 0 .625rem .625rem 0;
+	}
+
+	tr td:nth-child(1),
+	tr th:nth-child(1) {
+		border-radius: .625rem 0 0 .625rem;
+	}
 }
 
 #ch2{
     width: 55% !important;
     height: 55% !important;
+}
+
+.userCard{
+    background-color: #2c2d36;
+    .actionsBtns{
+        display: flex;
+        gap: 1rem;
+
+        a{
+            background-color: #57be68;
+            padding: .2rem 1.5rem;
+            border-radius:5px;
+        }
+        button{
+            background-color: #FE5B5F;
+            padding: .2rem 1.5rem;
+            border-radius:5px;
+        }
+    }
+}
+
+.Page{
+    margin: 4rem 50% !important;
+    transform: translateX(-10%);
+}
+ .title {
+    color: azure;
 }
