--- a/src/style/dashboard.scss
+++ b/src/style/dashboard.scss
@@ -322,10 +322,16 @@ aside{
     }
 }
 
-.Page{
+.Pagenation{
     margin: 4rem 50% !important;
-    transform: translateX(-10%);
+    transform: translateX(-10%) !important;
+    min-height: 2rem;
 }
  .title {
     color: azure;
+}
+
+.a-i{
+    text-align: left;
+    padding: 0 1rem;
 }
